src/sunlinsol/sptfqmr/F90/fsunlinsol_sptfqmr_mod.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.0.0
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.

! ---------------------------------------------------------------
! Programmer(s): Auto-generated by swig.
! ---------------------------------------------------------------
! SUNDIALS Copyright Start
! Copyright (c) 2002-2019, Lawrence Livermore National Security
! and Southern Methodist University.
! All rights reserved.
!
! See the top-level LICENSE and NOTICE files for details.
!
! SPDX-License-Identifier: BSD-3-Clause
! SUNDIALS Copyright End
! ---------------------------------------------------------------

module fsunlinsol_sptfqmr_mod
 use, intrinsic :: ISO_C_BINDING
 use fsunlinsol_mod
 use fsundials_types
 use fnvector_mod
 use fsundials_types
 implicit none
 private

 ! PUBLIC METHODS AND TYPES
 public :: FSUNLinSol_SPTFQMR
 public :: FSUNLinSol_SPTFQMRSetPrecType
 public :: FSUNLinSol_SPTFQMRSetMaxl
 public :: FSUNSPTFQMR
 public :: FSUNSPTFQMRSetPrecType
 public :: FSUNSPTFQMRSetMaxl
 public :: FSUNLinSolGetType_SPTFQMR
 public :: FSUNLinSolInitialize_SPTFQMR
 public :: FSUNLinSolSetATimes_SPTFQMR
 public :: FSUNLinSolSetPreconditioner_SPTFQMR
 public :: FSUNLinSolSetScalingVectors_SPTFQMR
 public :: FSUNLinSolSetup_SPTFQMR
 public :: FSUNLinSolSolve_SPTFQMR
 public :: FSUNLinSolNumIters_SPTFQMR
 public :: FSUNLinSolResNorm_SPTFQMR
 public :: FSUNLinSolResid_SPTFQMR
 public :: FSUNLinSolLastFlag_SPTFQMR
 public :: FSUNLinSolSpace_SPTFQMR
 public :: FSUNLinSolFree_SPTFQMR

 ! PARAMETERS
 integer(C_INT), parameter, public :: SUNSPTFQMR_MAXL_DEFAULT = 5_C_INT

 ! WRAPPER DECLARATIONS
 interface
function FSUNLinSol_SPTFQMR(y, pretype, maxl) &
bind(C, name="SUNLinSol_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
integer(C_INT), value :: pretype
integer(C_INT), value :: maxl
type(C_PTR) :: fresult
end function

function FSUNLinSol_SPTFQMRSetPrecType(s, pretype) &
bind(C, name="SUNLinSol_SPTFQMRSetPrecType") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: pretype
integer(C_INT) :: fresult
end function

function FSUNLinSol_SPTFQMRSetMaxl(s, maxl) &
bind(C, name="SUNLinSol_SPTFQMRSetMaxl") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: maxl
integer(C_INT) :: fresult
end function

function FSUNSPTFQMR(y, pretype, maxl) &
bind(C, name="SUNSPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
integer(C_INT), value :: pretype
integer(C_INT), value :: maxl
type(C_PTR) :: fresult
end function

function FSUNSPTFQMRSetPrecType(s, pretype) &
bind(C, name="SUNSPTFQMRSetPrecType") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: pretype
integer(C_INT) :: fresult
end function

function FSUNSPTFQMRSetMaxl(s, maxl) &
bind(C, name="SUNSPTFQMRSetMaxl") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT), value :: maxl
integer(C_INT) :: fresult
end function

function FSUNLinSolGetType_SPTFQMR(s) &
bind(C, name="SUNLinSolGetType_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolInitialize_SPTFQMR(s) &
bind(C, name="SUNLinSolInitialize_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolSetATimes_SPTFQMR(s, a_data, atimes) &
bind(C, name="SUNLinSolSetATimes_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a_data
type(C_FUNPTR), value :: atimes
integer(C_INT) :: fresult
end function

function FSUNLinSolSetPreconditioner_SPTFQMR(s, p_data, pset, psol) &
bind(C, name="SUNLinSolSetPreconditioner_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: p_data
type(C_FUNPTR), value :: pset
type(C_FUNPTR), value :: psol
integer(C_INT) :: fresult
end function

function FSUNLinSolSetScalingVectors_SPTFQMR(s, s1, s2) &
bind(C, name="SUNLinSolSetScalingVectors_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: s1
type(C_PTR), value :: s2
integer(C_INT) :: fresult
end function

function FSUNLinSolSetup_SPTFQMR(s, a) &
bind(C, name="SUNLinSolSetup_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a
integer(C_INT) :: fresult
end function

function FSUNLinSolSolve_SPTFQMR(s, a, x, b, tol) &
bind(C, name="SUNLinSolSolve_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR), value :: a
type(C_PTR), value :: x
type(C_PTR), value :: b
real(C_DOUBLE), value :: tol
integer(C_INT) :: fresult
end function

function FSUNLinSolNumIters_SPTFQMR(s) &
bind(C, name="SUNLinSolNumIters_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

function FSUNLinSolResNorm_SPTFQMR(s) &
bind(C, name="SUNLinSolResNorm_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
real(C_DOUBLE) :: fresult
end function

function FSUNLinSolResid_SPTFQMR(s) &
bind(C, name="SUNLinSolResid_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
type(C_PTR) :: fresult
end function

function FSUNLinSolLastFlag_SPTFQMR(s) &
bind(C, name="SUNLinSolLastFlag_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_LONG) :: fresult
end function

function FSUNLinSolSpace_SPTFQMR(s, lenrwls, leniwls) &
bind(C, name="SUNLinSolSpace_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_LONG) :: lenrwls
integer(C_LONG) :: leniwls
integer(C_INT) :: fresult
end function

function FSUNLinSolFree_SPTFQMR(s) &
bind(C, name="SUNLinSolFree_SPTFQMR") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: s
integer(C_INT) :: fresult
end function

 end interface


end module
